// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonorsList renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pkfPC haHNKR sc-psDhf iAENMo"
  >
    <div
      class="sc-AxirZ sc-AxhCb sc-qQxFs iHzsts"
      width="1"
    >
      <div
        class="sc-AxhUy ilqMHx"
      >
        No donors yet...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DonorsList skeleton renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pkfPC haHNKR sc-psDhf iAENMo"
  >
    <div
      class="sc-AxirZ sc-AxhCb sc-qQxFs iHzsts"
      width="1"
    >
      <div
        class="sc-AxirZ sc-pCPXO sc-qYUWV kPjGTf sc-pJipy gtukoL"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="sc-AxirZ sc-pCPXO sc-qYUWV kPjGTf sc-pJipy gtukoL"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="sc-AxirZ sc-pCPXO sc-qYUWV kPjGTf sc-pJipy gtukoL"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%;"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
